tests/NormalTests/paczka1/small_fuzzy/58689497.err
Error in line 2: 8jWSv88 S925 46,2
Error in line 7: A415 A415 84,7
Error in line 9: nV6VD S925 99,5
